# Code

./: ..gitignore.un~  .gitignore  .gitignore~
C++_Workspace/: main.cpp  test.cpp  whatWeNeed.txt
C++_Workspace/BST/: bst.cpp
C++_Workspace/Banking_App/: Banking_App.sln
C++_Workspace/CSII_Project/: parta.cpp
C++_Workspace/OOP/: README.md
C++_Workspace/OOP/Projects/Minesweeper_Project/: CMakeLists.txt  Plan.md  main.cpp
C++_Workspace/OOP/Projects/Minesweeper_Project/Remake/: CMakeLists.txt  button.cpp  button.hpp  game.cpp  game.hpp  grid.cpp  grid.hpp  main.cpp  tile.cpp  tile.hpp
C++_Workspace/Test_Project/: Test_Project.sln
C++_Workspace/delete_repeat/: deleteRepeat.cpp
C++_Workspace/linked_list/: main.cpp
C++_Workspace/my_complex/: myComplex.cpp
C++_Workspace/node_addons/: binding.gyp  build.ps1  cash_drawer.cpp  package-lock.json  package.json
C++_Workspace/string_class/: a.out  main.cpp  myString.cpp  myString.hpp  testing.cpp  tmp
C++_Workspace/struct_test/: test.cpp
C++_Workspace/test/: Animal.cpp  Animal.h  cool.cpp
C_Workspace/Text_Editor/: kilo.c
HTML_Workspace/: test.html
HTML_Workspace/portfolio/: deploy.bat  package-lock.json  package.json  vue.config.js
JavaScript_Workspace/fractal_example/: package.json
JavaScript_Workspace/node_addon_test/: cash drawer.node  cash_drawer.node  index.js  package.json
JavaScript_Workspace/notes_app/: TODO.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
JavaScript_Workspace/portfolio/: package-lock.json  package.json  webpack.config.js
Python_Workspace/: test.py
(+263 files in other folders)
